@@ -166,14 +166,16 @@ current group.")
 		    :position *mode-line-screen-position*
 		    :gc (make-mode-line-gc w screen))))
 
-(defgeneric redraw-mode-line-for (ml thing)
-  (:documentation "redraw the modeline for a screen, frame, ...other?"))
-
-;; This is a seperate defun in an attempt to get rid of the
+;; This is a regular defun in an attempt to get rid of the
 ;; MEMORY-FAULT return-from error.
-(defun redraw-screen-mode-line (ml obj)
+
+;; (defgeneric redraw-mode-line-for (ml thing)
+;;   (:documentation "redraw the modeline for a screen, frame, ...other?"))
+
+;; (defmethod redraw-mode-line-for (ml (obj screen))
+(defun redraw-mode-line-for (ml screen)
   (let* ((*current-mode-line-formatters* *screen-mode-line-formatters*)
-	 (*current-mode-line-formatter-args* (list (screen-current-group obj)))
+	 (*current-mode-line-formatter-args* (list (screen-current-group screen)))
 	 (string (mode-line-format-string ml)))
     (xlib:draw-image-glyphs (mode-line-window ml) (mode-line-gc ml)
 			    *mode-line-pad-x*
@@ -187,9 +189,6 @@ current group.")
 		     :x (+ *mode-line-pad-x*
 			   (xlib:text-width (xlib:gcontext-font (mode-line-gc ml)) string
 					    :translate #'translate-id)))))
-
-(defmethod redraw-mode-line-for (ml (obj screen))
-  (redraw-screen-mode-line ml obj))
 
 (defun update-screen-mode-lines ()
   (dolist (i *screen-list*)
